update README and CHANGELOG